# otus-qt-ls003

./: .gitignore  CMakeLists.txt  club.db  databasemanager.cpp  databasemanager.hpp  gypdelegate.cpp  gypdelegate.hpp  header.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  rc.qrc  sportmenmodel.cpp  sportmenmodel.hpp
